# XDAQ-OE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  t.py
.github/conan_profiles/: macos-14-arm64  macos-14-x64  ubuntu-22.04-x64
.github/workflows/: build.yml  build_windows_installer.yml  linux.yml  mac.yml  publish.yml  windows.yml
Source/: CMakeLists.txt  DeviceEditor.cpp  DeviceEditor.h  DeviceThread.cpp  DeviceThread.h  Headstage.cpp  Headstage.h  ImpedanceMeter.cpp  ImpedanceMeter.h  OpenEphysLib.cpp  ThorVision.cpp  ThorVision.h  ThorVisionEditor.cpp  ThorVisionEditor.h  ThorVisionHttpClient.h  ThorVisionTrigger.cpp  ThorVisionTrigger.h  ThorVisionTriggerEditor.cpp  ThorVisionTriggerEditor.h  XDAQ.h  t.cc  xdaqprotocol.h
Source/UI/: ChannelCanvas.cpp  ChannelCanvas.h  ChannelComponent.cpp  ChannelList.cpp  DeviceSelector.cpp  DeviceSelector.h
Source/rhythm-api/: intan_chip.h  misc.h  mock_okCFrontPanel.h  ports.h  rhd2000datablock.h  rhd2000evalboard.cpp  rhd2000evalboard.h  rhd2000registers.cpp  rhd2000registers.h  utils.h
cmake/: FindokFrontPanel.cmake  codesign.cmake
